Make runnable from jar